# watchman

./: .env  Cargo.toml  README.md  build.rs  diesel.toml  pyproject.toml
.github/workflows/: docker-image.yml
broker/: broker.proto  order.proto  position.proto
deployments/: Dockerfile
migrations/2024-06-09-062945_order/: up.sql
migrations/2024-06-09-063159_article/: up.sql
migrations/2024-06-17-045546_orders/: up.sql
migrations/2024-06-17-045552_articles/: down.sql  up.sql
migrations/2024-07-17-053345_sector/: down.sql  up.sql
migrations/2024-07-17-053423_interest/: down.sql  up.sql
migrations/2024-07-26-021003_positions/: down.sql  up.sql
migrations/2024-07-27-050434_charts/: up.sql
migrations/2024-07-31-021718_positions/: up.sql
migrations/2024-08-02-075153_daily_cap/: up.sql
src/: main.rs  model.rs  schema.rs
src/api/: lssec.rs  market.rs  mod.rs
src/broker/: broker.rs  lssec.rs  mod.rs
src/manager/: data.rs  mod.rs  position.rs  risk.rs  trading.rs
src/model/: charts.rs  daily_cap.rs  market.rs  mod.rs  order.rs  position.rs  prelude.rs  tick.rs
src/models/: articles.rs  charts.rs  daily_cap.rs  interest.rs  mod.rs  orders.rs  positions.rs  prelude.rs  sector.rs  trading_volume.rs
src/order/: order.rs
src/position/: mod.rs  position.rs
src/repository/: mod.rs
src/service/: manager.rs  mod.rs  position_manager.rs  strategy_manager.rs  trading_manager.rs
src/storage/: mod.rs  models.rs  postgres.rs
src/strategies/: envelope.py  envelope.rs  mod.rs  sample.rs  strategy_base.rs
