[package]
name = "watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "r2d2","chrono"] }
dotenvy = "0.15.7"
log = "0.4.21"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.117"
teloxide = { version = "0.12.2", features = ["full"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.203", features = ["derive"] }
chrono = "0.4.38"
