[package]
name = "watchman"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "r2d2","chrono","uuid","numeric"] }
dotenvy = "0.15.7"
log = "0.4.21"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.203", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
async-trait = "0.1.80"
anyhow = "1.0.86"
tonic = "0.11.0"
prost = "0.12.6"
prost-types = "0.12.6"
tokio-stream = { version = "0.1.15" , features = ["full"] }
url = "2.5.2"
moka = { version = "0.12.7", features = ["future"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
futures-util = "0.3.30"
once_cell = "1.19.0"
pyo3 = {  version = "0.22.1", features = ["auto-initialize"] }
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-log = "0.2.0"
spider = "1.99.10"
polars = { version = "0.42.0", features = ["rolling_window","lazy"] }
tokio-util = "0.7.11"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
diesel-async = { version = "0.5.0", features = ["deadpool", "postgres"] }
byteorder = "1.5.0"
bigdecimal = { version = "0.4.5", features = ["serde"] }
mockall = "0.13.0"


[build-dependencies]
tonic-build = "0.11.0"
