[tool.poetry]
name = "watcher"
version = "0.1.0"
description = ""
authors = ["Ben <ben@swit.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pykrx = "^1.0.45"
ta-lib = "^0.4.28"
finance-datareader = "^0.9.90"
matplotlib = "^3.8.4"
grpcio-tools = "^1.62.1"
python-dotenv = "^1.0.1"
nats-py = "^2.7.2"
bs4 = "^0.0.2"
plotly = "^5.20.0"
pytest = "^8.1.1"
transitions = "^0.9.0"
schedule = "^1.2.1"
apscheduler = "^3.10.4"
sqlalchemy = "^2.0.29"
holidays = "^0.46"
psycopg2-binary = "^2.9.5"
websocket = "^0.2.1"
websocket-client = "^1.8.0"
python-socketio = "^5.11.2"
pymysql = "^1.1.0"
backtesting = "^0.3.3"
dtaidistance = "^2.3.11"
yfinance = "^0.2.40"
numpy = "1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"